app/assets/css/main.css
@import "tailwindcss";
@import "./_typography.css";
@import "./_reset.css";
@import "./_animation.css";
@import "./_component.css";

@theme {
  /* Colors */
  --color-background: #f3ebe4;
  --color-secondary: #ddcabb;
  --color-foreground: #141115;
  --color-action: #c04f30;
  --color-accent: #527c5f;
  --color-error: #a30000;
  --color-slate: #2a2a2a;
  --color-link: #023b50;
  --color-link-hover: #0d769c;

  /* Breakpoints */
  --breakpoint-nav: 48rem;

  /* Fonts */
  --font-primary: "EB Garamond", serif;

  /* Animation */
  --duration-default: 250ms;
  --ease-default: cubic-bezier(0.516, 0.005, 0.198, 0.843);

  /* Spacing */
  --spacing-vertical: 50px;
  --spacing-vertical-lg: 100px;
  --spacing-side: 50px;
  --spacing-side-mobile: 25px;
  --spacing-max-width: 1500px;

  /* Navigation */
  --spacing-nav-height: 4.375rem;
}

@utility grid-12 {
  @apply grid grid-cols-12 gap-x-0 md:gap-x-5;
}

@layer base {
  html {
    scroll-padding-top: var(--spacing-nav-height);
  }

  body {
    font-size: 100%;
    font-family: var(--font-primary);
    background-color: var(--color-background);
    color: var(--color-foreground);
    font-weight: 500;
  }

  button:not(:disabled),
  a:not(:disabled) {
    cursor: pointer;
  }

  *:focus-visible {
    @apply outline-accent outline-2 outline-offset-2 transition-none;
  }

  a {
    @apply underline font-semibold text-link hover:text-link-hover transition-colors duration-default ease-default;
  }

  table {
    thead > tr {
      @apply border-b border-slate;
    }
    tbody {
      @apply divide-y divide-secondary;
    }
    th {
      @apply px-6 py-3 text-left text-xs font-medium text-foreground uppercase tracking-wider;
    }
    td {
      @apply px-6 py-4 whitespace-nowrap text-sm font-medium text-foreground;
    }
  }
}

